# all-blocks-sorting

./: CMakeLists.txt  README.md  main.cpp
algorithm/: Algorithm.cpp  Algorithm.h  Box.cpp  Box.h  CMakeLists.txt  Generator.cpp  Generator.h  State.cpp  State.h
algorithm_tests/: CMakeLists.txt
algorithm_tests/algorithm_tests/: AlgorithmTest.cpp  CMakeLists.txt
algorithm_tests/box_tests/: BoxTest.cpp  CMakeLists.txt
algorithm_tests/generator_test/: CMakeLists.txt  GeneratorTest.cpp
algorithm_tests/state_tests/: CMakeLists.txt  StateTest.cpp
